@@ -16,7 +16,8 @@ version 0.8.1 - Not released, available at https://simupop.svn.sourceforge.net/s
 		functions.
   - BUG: Fix a new functions in hapMapUtil.py
   - BUG: stop displaying full path name in the title of the parameter dialog.
-  - NEW: add chromName(), chromNames() to genotypic structure
+  - NEW: add chromName(), chromNames(), chromByName() to genotypic structure, and
+		chromNames parameter to population constructor.
 
 
 version 0.8.0 - (Rev 1215) Aug 14, 2007
